--- a/DavidProyect/src/app/app.component.html
+++ b/DavidProyect/src/app/app.component.html
@@ -1,1 +1,20 @@
 <app-header></app-header>
+<app-acerca-de></app-acerca-de>
+<app-experiencia></app-experiencia>
+<app-educacion></app-educacion>
+<app-hys></app-hys>
+<app-proyecto></app-proyecto>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
