--- a/DavidProyect/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
+++ b/DavidProyect/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
@@ -3,7 +3,7 @@
             <img src="../../../assets/perfil.jpg"  alt=""  class="img-fluid" id="fotodeperfil">
         </div>
         <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-            <p Id="nombre">{{persona.nombre}} Rodriguez</p>
+            <p Id="nombre">{{persona.nombre}} {{nombre.apellido}}</p>
             <p>Full Stack Developer Jr</p>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
