--- a/DavidProyect/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
+++ b/DavidProyect/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
@@ -10,7 +10,7 @@
             <a href=""> <img src="../../../assets/twitter.png" alt="twitter"></a>
             <a href=""> <img src="../../../assets/github.png" alt="github"></a>
             <a href=""> <img src="../../../assets/instagram.png" alt="instagram"></a>
-            <button type="button" class="btn btn-outline-light">INGRESO</button>
+            <button type="button" class="btn btn-outline-light" (click)="login()">INGRESO</button>
             
         </div>
     </div>
