--- a/DavidProyect/FrontEnd/src/app/components/experiencia/new-experiencia.component.html
+++ b/DavidProyect/FrontEnd/src/app/components/experiencia/new-experiencia.component.html
@@ -10,6 +10,13 @@
                     <label for="descripcionE">Descripcion de la tarea</label>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
                 </div>
+                <div class="form-group">
+                    <label for="imagenE"><b>Imagen de la Experiencia</b></label>
+                    <input type="text" class="form-control" id="imagenE" name="imagenE" [(ngModel)]="imagenE" required>
+                </div>
+                <br>
+                <div class="imagen">
+                </div>
                 <button class="btn btn-primary">
                     Agregar experiencia
                 </button>
@@ -19,6 +26,4 @@
         
     </div>
 </div>
-
-
 
