--- a/DavidProyect/FrontEnd/src/app/components/header/header.component.css
+++ b/DavidProyect/FrontEnd/src/app/components/header/header.component.css
@@ -1,7 +1,8 @@
 div{
-    background-color: #a1b5cb;
+  background-color: #0a2a4d;
 }
+
 app-social{
-    float:right;
-    margin-top: 25px;
+  float: right;
+  margin-top: 25px;
 }
