--- a/DavidProyect/FrontEnd/src/app/components/hys/new-skill.component.html
+++ b/DavidProyect/FrontEnd/src/app/components/hys/new-skill.component.html
@@ -10,6 +10,13 @@
                     <label for="porcentaje">Porcentaje</label>
                     <input type="text" class="form-control" id="porcentaje" name="porcentaje" [(ngModel)]="porcentaje" required>
                 </div>
+                <div class="form-group">
+                    <label for="imagenC"><b>Imagen de la Skill</b></label>
+                    <input type="text" class="form-control" id="imagenC" name="imagenC" [(ngModel)]="imagenC" required>
+                </div>
+                <br>
+                <div class="imagen">
+                </div>
                 <button class="btn btn-primary">
                     Agregar skill
                 </button>
