--- a/DavidProyect/FrontEnd/src/app/components/acerca-de/edit-acerca-de.component.html
+++ b/DavidProyect/FrontEnd/src/app/components/acerca-de/edit-acerca-de.component.html
@@ -12,11 +12,12 @@
                 </div>
                 <div class="form-group">
                     <label for="descripcion">Descripción</label>
-                    <input type="text" class="form-control" id="descripcion" name="descripcion" [(ngModel)]="persona.descripcion" required>
+                    <textarea class="form-control" id="descripcion" name="descripcion" [(ngModel)]="persona.descripcion" rows="4" required></textarea>
                 </div>
+                
                 <div class="form-group">
-                    <label for="img">Descripción de Estudios</label>
-                    <input type="file" class="form-control" id="img" name="img" [(ngModel)]="persona.img" (change)="uploadImageProyectos($event)" accept=".jpg, .jpeg, .png">
+                    <label for="img">Imagen de Perfil</label>
+                    <input type="file" class="form-control" id="img" name="img" [(ngModel)]="persona.img" (change)="uploadImage($event)" accept=".jpg, .jpeg, .png">
                 </div>
                 <div class="imagen">
                     <img [src]="imageService.url" alt="" width="200px">
