--- a/DavidProyect/FrontEnd/src/app/components/educacion/editeducacion.component.html
+++ b/DavidProyect/FrontEnd/src/app/components/educacion/editeducacion.component.html
@@ -10,6 +10,22 @@
                     <label for="descripcionE">Descripcion de sus estudios</label>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="educacion.descripcionE" required>
                 </div>
+                <div class="form-group">
+                    <label for="imagenE"><b>Imagen De la Educacion</b></label>
+                    <input type="text" class="form-control" id="imagenE" name="imagenE" [(ngModel)]="educacion.imagenD" required>
+                </div>
+                <br>
+                
+                <div class="imagen">
+                        <img [src]="educacion?.imagenD" alt="Imagen de la educación" class="imagen-educacion">
+                      </div>
+
+    
+            
+                <br>
+                <div class="imagen">
+                    
+                </div>
                 <button class="btn btn-primary">
                     Editar educacion
                 </button>
