--- a/DavidProyect/FrontEnd/src/app/components/educacion/educacion.component.css
+++ b/DavidProyect/FrontEnd/src/app/components/educacion/educacion.component.css
@@ -1,10 +1,16 @@
 .row{
-    padding: 20px;
+  padding: 20px;
+}
 
+
+h1, h3{
+  display: inline;
 }
 div{
-    background: #a1b5cb;
+  background-color: #0a2a4d;
+  text-align: center;
+  color: white;
 }
-h1, h3{
-    display: inline;
+.row, h1, button, td {
+  color: white;
 }
