--- a/DavidProyect/FrontEnd/src/app/components/educacion/educacion.component.html
+++ b/DavidProyect/FrontEnd/src/app/components/educacion/educacion.component.html
@@ -15,6 +15,10 @@
                         <h2>{{Educacion.nombreE}}</h2>
                     </td>
                     <td>{{Educacion.descripcionE}}</td>
+                    <td>
+                        <img class= "img-fluid" alt=""  src="{{Educacion.imagenD}}" width="150px">
+                          
+                      </td>
                     <td *ngIf="isLogged">
                         <button class="btn btn-light" routerLink="/editedu/{{Educacion.id}}">
                             <i class="bi bi-pencil-fill"></i> EDITAR</button>
