--- a/DavidProyect/FrontEnd/src/app/components/educacion/neweducacion.component.html
+++ b/DavidProyect/FrontEnd/src/app/components/educacion/neweducacion.component.html
@@ -10,6 +10,13 @@
                     <label for="descripcionE">Descripcion de sus estudios</label>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
                 </div>
+                <div class="form-group">
+                    <label for="imagenD"><b>Imagen de la Educacion</b></label>
+                    <input type="text" class="form-control" id="imagenD" name="imagenD" [(ngModel)]="imagenD" required>
+                </div>
+                <br>
+                <div class="imagen">
+                </div>
                 <button class="btn btn-primary">
                     Agregar educacion
                 </button>
