--- a/DavidProyect/FrontEnd/src/app/components/experiencia/experiencia.component.html
+++ b/DavidProyect/FrontEnd/src/app/components/experiencia/experiencia.component.html
@@ -1,5 +1,7 @@
 <div class="row">
-    <h1>Experiencia Laboral</h1>
+    
+    <h1 id="experiencia-laboral">Experiencia Laboral</h1>
+
     <div class="col-lg-2">
         <button type="button" class="btn btn-dark" routerLink="/nuevaexp" *ngIf="isLogged">
             Nueva Experiencia
@@ -17,6 +19,10 @@
                     <td>
                         {{Experiencia.descripcionE}}
                     </td>
+                    <td>
+                        <img class= "img-fluid" alt=""  src="{{Experiencia.imagenE}}" width="700px">
+                          
+                      </td>
                     <td *ngIf="isLogged">
                         <button class="btn btn-light" routerLink="/editexp/{{Experiencia.id}}">
                             <i class="bi bi-pencil-fill"></i> EDITAR</button>
