--- a/DavidProyect/FrontEnd/src/app/components/hys/hys.component.css
+++ b/DavidProyect/FrontEnd/src/app/components/hys/hys.component.css
@@ -1,10 +1,16 @@
 .row{
-    background-color: #a1b5cb;
-    padding: 20px;
+  background-color: #0a2a4d;
+  padding: 20px;
 }
 
 .circulo{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+div{
+  background-color: #0a2a4d;
+  text-align: center;
+  color: white;
 }
