--- a/DavidProyect/FrontEnd/src/app/components/proyecto/edit-proyecto.component.html
+++ b/DavidProyect/FrontEnd/src/app/components/proyecto/edit-proyecto.component.html
@@ -26,17 +26,23 @@
                         <div class="form-group">
                             <label for="linkP"><b>Link del proyecto</b></label>
                             <input type="text" class="form-control" id="linkP" name="linkP" [(ngModel)]="proyecto.linkP" required>
+                       
                         </div>
                         <div class="form-group">
                             <label for="imagenP"><b>Imagen Del Proyecto</b></label>
-                            <input type="file" class="form-control" id="imagenP" name="imagenP" (ngModel)="proyecto.imagenP" 
-                            (change)="uploadImageProyectos($event)"
-                            accept=".jpg, .jpeg, .png">
+                            <input type="text" class="form-control" id="imagenP" name="imagenP" [(ngModel)]="proyecto.imagenP" required>
                         </div>
                         <br>
+                        
                         <div class="imagen">
-                            <img [src]="proyecto.imagenP" width="200px" alt="Imagen Proyecto" *ngIf='imageServiceLogoP.url == ""'>
-                            <img [src]="imageServiceLogoP.url" width="200px" alt="Imagen Proyecto" *ngIf='imageServiceLogoP.url != ""'>
+                                <img [src]="proyecto?.imagenP" alt="Imagen del proyecto" class="imagen-proyecto">
+                              </div>
+
+            
+                    
+                        <br>
+                        <div class="imagen">
+                            
                         </div>
                         <br>
                         <div class="boton">
