--- a/DavidProyect/FrontEnd/src/app/components/proyecto/new-proyecto.component.html
+++ b/DavidProyect/FrontEnd/src/app/components/proyecto/new-proyecto.component.html
@@ -2,10 +2,7 @@
 <div class="row pagina">
     <div class="margen">        
         <div class="container">
-            <div *ngIf="isLogged == false">
-              
-            </div>
-            <div *ngIf="isLogged == true">
+            
                 <div class="titulo">
                     <h1>Nuevo Proyecto</h1>
                 </div>
@@ -24,18 +21,15 @@
                             <label for="linkP"><b>Link del proyecto</b></label>
                             <input type="text" class="form-control" id="linkP" name="linkP" [(ngModel)]="linkP" required>
                         </div>
+
                         <div class="form-group">
                             <label for="imagenP"><b>Imagen Del Proyecto</b></label>
-                            <input type="file" class="form-control" id="imagenP" name="imagenP" (ngModel)="imagenP" 
-                            (change)="uploadImageProyectos($event)"
-                            accept=".jpg, .jpeg, .png">
+                            <input type="text" class="form-control" id="imagenP" name="imagenP" [(ngModel)]="imagenP" required>
                         </div>
                         <br>
                         <div class="imagen">
-                            <img [src]="imageServiceLogoP.url" width="200px" alt="Imagen Proyecto" *ngIf='imageServiceLogoP.url != ""'>
                         </div>
-                        <br>
-                        <div class="boton">
+                         <div class="boton">
                             <button class="btn btn-dark boton">Agregar</button>
                         </div>
                     </form>
@@ -47,4 +41,4 @@
             </div>
         </div>
     </div>
-</div>
+
